--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,10 @@
 [workspace]
 resolver = "3"
-members = ["common", "flush", "help", "ls", "pwd", "write"]
+members = [
+  "commands/help",
+  "commands/ls",
+  "commands/pwd",
+  "commands/write",
+  "common",
+  "flush"
+]
