--- a/commands/help/Cargo.toml
+++ b/commands/help/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "pwd"
+name = "help"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-common = { path = "../common" }
+common = { path = "../../common" }
