--- a/commands/ls/Cargo.toml
+++ b/commands/ls/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "help"
+name = "ls"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-common = { path = "../common" }
+common = { path = "../../common" }
