--- a/commands/pwd/Cargo.toml
+++ b/commands/pwd/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "ls"
+name = "pwd"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-common = { path = "../common" }
+common = { path = "../../common" }
