--- a/commands/ls/Cargo.toml
+++ b/commands/ls/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.42"
 common = { path = "../../common" }
+libc = "0.2.177"
+users = "0.11.0"
+xattr = "1.6.1"
