--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.42"
+libc = "0.2.177"
 regex = "1.12.2"
+users = "0.11.0"
+xattr = "1.6.1"
